Fixes and improvements

--- a/BozaniBlazor/Components/Layout/NavMenu.razor
+++ b/BozaniBlazor/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="">BozaniBlazor</a>
+		<a class="navbar-brand" href="">Božani!!!</a>
 	</div>
 </div>
 
@@ -10,19 +10,19 @@
 	<nav class="nav flex-column">
 		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-				<span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+				<span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
 			</NavLink>
 		</div>
-		
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="textAnalyzer">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Text Analyzer
+                <span class="bi bi-search" aria-hidden="true"></span> Text Analyzer
             </NavLink>
         </div>
-		
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="anagrammer">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Anagrammer
+                <span class="bi bi-book-fill" aria-hidden="true"></span> Anagrammer
             </NavLink>
         </div>
 
