--- a/BozaniBlazor/Components/Pages/Home.razor
+++ b/BozaniBlazor/Components/Pages/Home.razor
@@ -1,7 +1,15 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Božani!!!</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Božani!!!</h1>
 
-Welcome to your new app.
+<div class="page-list">
+	<a href="/textAnalyzer" class="btn btn-primary">
+		<span class="bi bi-search"></span> Text Analyzer
+	</a>
+
+	<a href="/anagrammer" class="btn btn-primary">
+		<span class="bi bi-book-fill"></span> Anagrammer
+	</a>
+</div>
