--- a/BozaniBlazor/Components/Layout/MainLayout.razor.css
+++ b/BozaniBlazor/Components/Layout/MainLayout.razor.css
@@ -1,15 +1,21 @@
 .page {
     position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+    height: 100vh;
 }
 
 main {
     flex: 1;
+    height: 100%;
+    overflow: auto;
+    overflow-wrap: break-word;
 }
 
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .top-row {
@@ -56,6 +62,7 @@ main {
         height: 100vh;
         position: sticky;
         top: 0;
+        flex-direction: column;
     }
 
     .top-row {
