--- a/BozaniBlazor/wwwroot/app.css
+++ b/BozaniBlazor/wwwroot/app.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -18,6 +20,10 @@ a, .btn-link {
 
 .content {
     padding-top: 1.1rem;
+}
+
+h1 {
+    margin-bottom: 0.75rem
 }
 
 h1:focus {
@@ -57,4 +63,11 @@ h1:focus {
 
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
     text-align: start;
+}
+
+
+@media (min-width: 641px) {
+    h1 {
+        margin-top: 1rem;
+    }
 }
