--- a/BozaniBlazor/Components/Layout/MainLayout.razor.css
+++ b/BozaniBlazor/Components/Layout/MainLayout.razor.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column-reverse;
-    height: 100vh;
+    height: 100svh;
 }
 
 main {
