--- a/BozaniBlazor/wwwroot/app.css
+++ b/BozaniBlazor/wwwroot/app.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 a, .btn-link {
@@ -16,6 +16,10 @@ a, .btn-link {
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+}
+
+.btn .bi {
+    margin-right: 0.25rem;
 }
 
 .content {
